# advanced-synthetic-erp-data-generator

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  generator_vision_architecture_specification.md  main.py  pyproject.toml
generator/: .gitignore  README.md  pyproject.toml
generator/docs/: adding-tools.md  locator-guidelines.md  recording-tools.md
generator/examples/: sap-change-vendor-bank-details.execution-trace.yaml  sap-create-goods-receipt.execution-trace.yaml  sap-create-goods-receipt.trace.jsonl  sap-create-purchase-order.execution-trace.yaml  sap-create-purchase-order.trace.jsonl  sap-create-purchase-requisition.execution-trace.yaml  sap-create-purchase-requisition.trace.jsonl  sap-create-supplier-invoice.execution-trace.yaml  sap-create-supplier-invoice.trace.jsonl  sap-init-login.execution-trace.yaml  sap-init-login.trace.jsonl  sap-larceny3-manual.execution-trace.yaml  sap-larceny5-manual.execution-trace.yaml  sap-procure-to-pay-runtime-handover.execution-trace.yaml  sap-procure-to-pay-runtime-handover.trace.jsonl  sap-procure-to-pay.execution-trace.yaml  sap-send-payment.execution-trace.yaml  sap-send-payment.trace.jsonl
generator/src/erp_trace_executor/: __init__.py  __main__.py  canonical.py  cli.py  context.py  credentials.py  errors.py  evidence.py  executor.py  fiori_messages.py  fiori_page.py  fiori_types.py  models.py  registry.py  runtime_delay.py  state.py  trace_loader.py
generator/src/erp_trace_executor/browser/: session.py
generator/src/erp_trace_executor/tools/fiori/: __init__.py  change_vendor_bank_details.py  create_goods_receipt.py  create_order.py  create_purchase_order.py  create_purchase_requisition.py  create_split_goods_receipt.py  create_supplier_invoice.py  (+5 more)
generator/tests/: conftest.py  test_canonical_execution.py  test_cli.py  test_create_purchase_order.py  test_create_purchase_requisition.py  test_create_supplier_invoice.py  test_credentials.py  test_executor.py  test_fiori_login.py  test_fiori_page.py  test_fiori_types.py  test_invoice_and_lock_helpers.py  test_logging_config.py  test_registry.py  test_send_payment.py  test_state.py  test_tool_contracts.py  test_tool_returned_objects.py  test_trace_loader.py
generator/tests/fixtures/fake_fiori/: index.html
post_processor/: README.md  pyproject.toml
post_processor/downloads/RUN_BA-210/: BKPF.csv  BSEG.csv  CDHDR.csv  CDPOS.csv  EBAN.csv  EKKO.csv  EKPO.csv  MKPF.csv  MSEG.csv  RBKP.csv  RSEG.csv  RUN_BA-210.config.yaml  export-report.json  row-linkage.csv
post_processor/processed/RUN_BA-210/: BKPF.csv  BSEG.csv  CDHDR.csv  CDPOS.csv  EBAN.csv  EKKO.csv  EKPO.csv  MKPF.csv  MSEG.csv  RBKP.csv  RSEG.csv  processing-report.json  provenance.csv  row-linkage.csv  validation-report.json
post_processor/src/erp_sap_export/: __init__.py  artifacts.py  cli.py  processing.py  se16.py  specs.py
post_processor/tests/: test_export_artifacts.py  test_live_sap_webgui.py  test_processing.py  test_se16_parser.py
trace_executor/: README.md  pyproject.toml
trace_executor/docs/: adding-tools.md  recording-tools.md
trace_executor/examples/: sap-create-purchase-order.execution-trace.yaml  sap-create-purchase-requisition.execution-trace.yaml  sap-procure-to-pay-runtime-handover.execution-trace.yaml
trace_executor/src/erp_trace_executor/: canonical.py  context.py  credentials.py  errors.py  fiori_messages.py  logging_config.py  models.py  runtime_delay.py  tooling.py
trace_executor/src/erp_trace_executor/browser/: __init__.py  session.py
trace_executor/tests/: test_cli.py  test_create_purchase_order.py  test_fiori_helpers.py  test_fiori_login.py  test_fiori_messages.py  test_registry.py
trace_generator/: README.md  pyproject.toml
trace_generator/schemas/: execution-trace.schema.json  post-processing-manifest.schema.json
trace_generator/src/erp_trace_generator/: __init__.py  artifact_models.py  artifacts.py  bindings.py  cli.py  config.py  env.py  errors.py  fraud.py  generator.py  models.py  planning.py  realism.py  schema_export.py  timeline.py  tool_validation.py
trace_generator/tests/: test_realism.py  test_trace_generation.py
(+48 files in other folders)
