[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "erp-trace-executor"
version = "0.1.0"
description = "Canonical YAML trace executor for browser-backed ERP task flows."
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
  "playwright>=1.55,<2",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
]

[project.scripts]
erp-trace-exec = "erp_trace_executor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/erp_trace_executor"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-m 'not live_sap'"
markers = [
  "live_sap: requires SAP credentials, a reachable SAP tenant, and mutable business data",
]
