[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "erp-trace-generator"
version = "0.1.0"
description = "Trace planner that turns compiled ERP generation config into execution artifacts."
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
  "pydantic>=2.11,<3",
  "pyyaml>=6.0,<7",
  "tzdata>=2026.2",
]

[dependency-groups]
dev = [
  # Tool contract tests import the executor registry from ../trace_executor, whose Fiori tools import Playwright.
  "playwright>=1.55,<2",
  "pytest>=8.4,<9",
]

[project.scripts]
erp-trace-generate = "erp_trace_generator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/erp_trace_generator"]

[tool.uv]
package = true
